--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
           name: photos-application
           image: bhuvanprasad/photosapp:v1
-          imagePullSecrets:
-            - name: dockerhub-cred
-          - ports:
+          ports:
             - containerPort: 80
+      imagePullSecrets:
+            - name: dockerhub-cred
