--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -18,7 +18,5 @@ spec:
         - ports:
             - containerPort: 80
           name: photos-application
-          image: bhuvanprasad/photosapp:v5899484607
+          image: nginx:latest
           imagePullPolicy: Always
-      imagePullSecrets:
-        - name: dockerhub-cred
