--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -20,3 +20,10 @@ spec:
           name: nginx-application
           image: nginx:latest
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
